src/test/contracts/negative/duplicate_entrypoints.mligo
module Foo = struct
  [@entry]
  let b () () : operation list * unit = failwith ()
  [@entry]
  let b () () : operation list * unit  = failwith ()
end
